--- a/gab/gab.html
+++ b/gab/gab.html
@@ -2,13 +2,12 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
   <navbar>
       {{> yield "navbar"}}
   </navbar>
   <content>
   <div class="container-fluid">
-    <div class="row hidden-xs hidden-sm logo"><p style="color:white;font-size:20px;">Logo ici</p></div>
+    <div class="row hidden-xs logo"><p style="color:white;font-size:20px;">Logo ici</p></div>
       {{> yield}}
   </div>    
   </content>
@@ -18,7 +17,6 @@
   <footer>
    {{> yield "footer"}}
   </footer>
-</body>
 </template>
 
 <template name="Footer">
@@ -67,36 +65,42 @@
     </nav>
 </template>
 <template name="Home">
-    <div class="row">
-      <div class="col-xs-12 greatings">
-        <h2>{{_ "Hello " }}{{#if currentUser}}{{currentUser.username}}{{/if}}</h2>
-        <h3>{{_ "It's " }}{{current_day.day}} {{current_day.part}}{{_ " and right now, you could " }}</h3>
+    <div class="row greatings">
+      <div class="col-xs-12">
+        <p>{{_ "Salut " }}{{#if currentUser}}{{currentUser.username}}{{/if}}!<br />
+        {{_ "En ce " }}{{current_day.day}} {{current_day.part}},{{_ " tu pourrais  " }}</p>
       </div>
 
     </div>
-    <div class="row">
+    <div class="row acts">
       {{#each current_day.activities}}
       <div class="col-xs-4 col-sm-2">
-        <div class="icons">
+       <div class="icons">
+        <a class="act_link" href="/act/{{slug}}"> 
 	  <p>{{name}}</p>
-          <a href="/act/{{slug}}"><img src="/{{file_name}}" class="img" alt="Responsive image"></a>
-        </div>
+          <img src="/{{file_name}}" class="img" alt="Responsive image">
+        </a>	
+       </div>
       </div>
       {{/each}}
     </div>
 </template>
 <template name="activity">
 {{#if activity}}
-  <div class="back-button">&#60;</div>
-  <div class="act-desc">{{activity.desc}}</div>
-  <div class="row">
+  <div class="row greatings">
+    <div class="col-xs-12">
+      <div class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></div>
+      <div class="act-desc">{{activity.desc}}</div>
+    </div>
+  </div>
+  <div class="row acts">
   {{#each tags}}
     <div class="col-xs-4 col-sm-2">
+     <a href="/tag/{{slug}}">
       <div class="act_icons">
-        <a href="/tag/{{slug}}">
-          <p>{{name}}</p>
-        </a>
+         <div class="tag_name"><p><span>{{name}}</span></p></div>
       </div>
+     </a> 
     </div>
 
   {{/each}}
@@ -105,11 +109,14 @@
 </template>
 
 <template name="tag">
-  <div class="back-button">&#60;</div>
-  <div class="act-desc">{{tag.desc}}</div>
-  <div class="row">
-  
-{{# if no_child}}
+   <div class="row greatings">
+    <div class="col-xs-12">
+      <div class="back-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></div>
+      <div class="act-desc">{{tag.desc}}</div>
+    </div>
+  </div>
+
+<!--{{# if no_child}}
 
 <h3 style="color:white;">A voir????</h3>
 
@@ -117,6 +124,8 @@
 <a href="http://{{url}}" target="_blank"><h3 style="color:white;">{{url}}</h3></a>
 {{/each}}
 {{else}}
+-->
+<div class="row acts">
   {{#each tags}}  
     <div class="col-xs-4 col-sm-2">  
 	<div class="tag_icons">
@@ -125,20 +134,28 @@
 	  <div id="tag{{this._id}}" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               {{#each addIndex links}} 
-              <div class="item {{#if equals index 0}}active{{/if}}">
-                <a style="color:white;" href="http://{{value.url}}">{{value.url}}</a>
+              <div class="item {{#if equals index 0}}active scores{{/if}}" id="{{index}}">
+                <a href="#" onclick="window.open('http://{{value.url}}', '_blank', 'location=yes','closebuttoncaption=Return'); return false;">{{value.url}}</a>
 	      </div>
 	      {{/each}}
-	    </div>
-
-	    <a class="left carousel-control" href="#tag{{this._id}}" role="button" data-slide="prev">&#60;</a>
-	    <a class="right carousel-control" href="#tag{{this._id}}" role="button" data-slide="next">&#62;</a>
-	  </div>
-        </div>
+	    </div> 
+		<div class="row slide_control">
+	          <div class="col-xs-4">
+	            <a class="slide_button" href="#tag{{this._id}}" role="button" data-slide="prev">&#60;</a>
+	          </div>
+	          <div class="col-xs-4 slide_counter">
+	            <div class="num">{{currentIndex tag.slug}}</div>/{{length}}
+	          </div>
+	          <div class="col-xs-4">
+	            <a class="right slide_button" href="#tag{{this._id}}" role="button" data-slide="next">&#62;</a>
+                  </div>
+	        </div>
+          </div>
+	</div>
     </div>
 {{/each}}
-{{/if}}
-  </div>
+</div>
+<!--{{/if}}-->
 </template>
 
 <template name="links">
@@ -149,6 +166,7 @@
 
 </template>
 <template name="Admin">
+{{> loginButtons}}
 <div style="height:100%;background-color:white;">
   {{#if currentUser.profile.cat.is_staff}}
 <p>Salut {{currentUser.username}}</p>
@@ -187,10 +205,10 @@ Ne pas toucher aux pitons, merci
 	<input style="margin-top:10px;" name="file_name" class="form-control input-lg" type="text" placeholder="{{_ "File name here" }}">
 	time of the day:
 	<select style="margin-top:10px;max-height:800px;overflow-y:scroll;" id="times" name="times" class="form-control input-lg" type="text" multiple>
-          <option value="morning">{{_ "Morning" }}</option>
-          <option value="afternoon">{{_ "Afternoon" }}</option>
-          <option value="evening">{{_ "Evening" }}</option>
-          <option value="night">{{_ "Night" }}</option>
+          <option value="matin">{{_ "Matin" }}</option>
+          <option value="après-midi">{{_ "Après-midi" }}</option>
+          <option value="soir">{{_ "Soir" }}</option>
+          <option value="nuit">{{_ "Nuit" }}</option>
         </select>
 	<input style="margin-top:10px;" class="btn" type="submit" value="Create">
       </form>
@@ -257,6 +275,40 @@ Ne pas toucher aux pitons, merci
 	<input style="margin-top:10px;" class="btn" type="submit" value="Create">
       </form>
     </div>
+    <div class="panel panel-default" style="margin:10px;">
+    Activities:
+      <ul>
+      {{# each activities}}
+       <li>{{name}}<button type="button" class="del_act close"><span>&times;</span></button></li>
+      {{/each}}
+      </ul>
+    </div>
+    <div class="panel panel-default" style="margin:10px;">
+    Tags:
+      <ul>
+      {{# each tags}}
+       <li>{{name}}<button type="button" class="del_tag close"><span>&times;</span></button></li>
+      {{/each}}
+      </ul>
+    </div>
+    <div class="panel panel-default" style="margin:10px;">
+    Sub-tags:  
+      <ul>
+      {{# each childtags}}
+       <li>{{name}}<button type="button" class="del_ctag close"><span>&times;</span></button></li>
+      {{/each}}
+      </ul>
+    </div>
+    <div class="panel panel-default" style="margin:10px;">
+    Links:  
+      <ul>
+      {{# each links}}
+       <li>{{url}}<button type="button" class="del_link close"><span>&times;</span></button></li>
+      {{/each}}
+      </ul>
+    </div>
+
+
 
 {{else}}
 Voir pour le 404...
